# fluidsim

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md  build-and-run.sh
include/: constants.h  indexBuffer.h  initializer.h  shaderLoader.h
install/: install.sh  installation_arch_wayland.sh  installation_arch_x11.sh
shaders/: advection.shader  basic.shader  blur.shader  copyTexture.shader  divergence.shader  fluid.shader  pressure.shader  texture.shader
src/: application.cpp  glad.c  indexBuffer.cpp  textureTest.cpp  vertexBuffer.cpp
src/common/: initializer.cpp  renderer.cpp  shaderLoader.cpp
